Terraform-VPC/modules/sg/main.tf
resource "aws_security_group" "sg" {
    name = "alb security group"
    description = "allow http/https access on port 80/443"
    vpc_id = var.vpc_id
  
    ingress  {
        description = "http access"
        from_port   = 80
        to_port     = 80
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    ingress  {
        description = "https access"
        from_port   = 443
        to_port     = 443
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    ingress  {
        description = "SSH access"
        from_port   = 22
        to_port     = 22
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    egress {
        from_port   = 0
        to_port     = 0
        protocol    = -1
        cidr_blocks = ["0.0.0.0/0"]       
    }
    tags = {
        Name = "my_sg"
    }

}
